# pixelsrc

./: .gitignore  AGENTS.md  ANNOUNCEMENT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  VISION.md  codecov.yml  demo.sh  justfile  rustfmt.toml  state.json  ttp.md
.beads/: daemon-error  issues.jsonl  metadata.json
.cargo/: config.toml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: browser-tests.yml  ci.yml  crates.yml  demos.yml  homebrew.yml  obsidian-release.yml  python.yml  release.yml  wasm.yml  website.yml
benches/: critical_paths.rs
chocolatey/: pxl.nuspec
chocolatey/tools/: chocolateyinstall.ps1
debian/: changelog  control  copyright  rules
docs/: ANNOUNCEMENT.md  BACKLOG.md  DIFFERENTIATOR.md  PUBLISHING.md  VISION.md  artistic-workflow.md  colors.md  migration.md  personas.md  primer.md  primer_brief.md  timing-functions.md
docs/book/: .gitignore  book.toml
docs/plan/: README.md  advanced-transforms.md  build-system.md  colored-grid-display.md  css.md  demo-coverage.md  demo-tests-part2.md  demo-tests.md  drafting-table-draw.md  drafting-table-mask.md  drafting-table-scaffold.md  drafting-table.md  format2.md  gap-analysis.md  import-system.md  lsp.md  mcp-server.md  mdbook.md  nested-compositions.md  persona-integration.md  phase-0-gaps-mayor.md  phase-0-gaps.md  phase-0-mvp.md  phase-0-status.md  phase-1-palettes.md  phase-10-github-migration.md  phase-11-website-improvements.md  phase-12-theming.md  phase-12-tiling.md  phase-13-analyze.md  phase-13-theming.md  phase-14-analyze.md  phase-14-tiling.md  phase-15-ai-tools.md  phase-15-analyze.md  phase-16-pxl-format.md  phase-16-tiling.md  phase-17-ai-tools.md  phase-2-animation.md  phase-2-composition.md  (+20 more)
docs/prompts/: best-practices.md  sprite-examples.md  system-prompt.md
docs/spec/: format.md  phase-19-atf.md  pxl-toml.md
docs/tasks/: mcp-server.md
examples/: banner_pxl.jsonl  coin.pxl  color_variants.jsonl  fallout2_wanderer.pxl  favicon_p.jsonl  favicon_pxl.pxl  forest_scene.jsonl  heart.jsonl  heart.pxl  hero.jsonl  hero.pxl  hero_equipped.jsonl  jeff_goldblum.jsonl  jeff_goldblum.pxl  jeff_goldblum_popart.pxl  nested_building.jsonl  nested_ui.jsonl  palette_cycle.jsonl  social_preview.jsonl  themed_scene.pxl  tiled_scene.jsonl  transforms_demo.jsonl  walk_cycle.jsonl  walk_cycle.pxl
examples/avatar-prototype/: skull-outline.pxl  skull.pxl
examples/demos/: README.md
examples/iso-prototype/: PXL-PRIME.md  head-ultimate.pxl  reference-head.pxl  simple-face.pxl  test-shapes.pxl  vault-dweller-animated.pxl  vault-dweller-iso.pxl  vault-dweller-large.pxl  vault-dweller-speaking.pxl  vault-dweller.pxl  wasteland-tile.pxl
examples/mcp/: README.md  claude_desktop_config.json
homebrew-pixelsrc/: README.md
homebrew-pixelsrc/Formula/: pxl-src.rb  pxl.rb
obsidian-pixelsrc/: .gitignore  PUBLISHING.md  README.md  esbuild.config.mjs  main.js  manifest.json  package.json  styles.css
obsidian-pixelsrc/src/: codeblock.ts  livepreview.ts  main.ts  renderer.ts  settings.ts  wasm.d.ts
packaging/aur/: README.md
python/: README.md  pixelsrc.pyi  pyproject.toml
python/pixelsrc/: __init__.py  __init__.pyi
python/tests/: conftest.py  test_color.py  test_format.py  test_import.py  test_numpy_pil.py  test_parse.py  test_registry.py  test_render.py  test_validate.py  test_version.py
scoop/: pxl.json
scripts/: demo-coverage.sh  generate-demos.sh  install-hooks.sh  parse_demos.awk
src/: alias.rs  analyze.rs  animation.rs  atlas.rs  blend.rs  cli.rs  color.rs  composition.rs  diff.rs  draw.rs  emoji.rs  error.rs  explain.rs  fmt.rs  gif.rs  import.rs  include.rs  init.rs  install.rs  lib.rs  lsp.rs  lsp_agent_client.rs  main.rs  mask.rs  models.rs  modifiers.rs  motion.rs  onion.rs  output.rs  palette_cycle.rs  palette_parser.rs  parser.rs  particle.rs  path.rs  prime.rs  registry.rs  renderer.rs  resolve_imports.rs  scaffold.rs  shapes.rs  (+12 more)
src/analyze/: compression.rs  dimensions.rs  families.rs  mod.rs  relationships.rs  report.rs  roles.rs  shapes.rs  tokens.rs
src/antialias/: context.rs  gradient.rs  mod.rs
src/cli/: agent.rs  build.rs  draw.rs  explain.rs  import.rs  info.rs  install.rs  mask.rs  mod.rs  render.rs  scaffold.rs  show.rs  transform.rs  validate.rs
src/composition/: blend.rs  context.rs  error.rs  mod.rs  render.rs  resolve.rs
src/config/: loader.rs  mod.rs  schema.rs
src/export/: godot.rs  json.rs  libgdx.rs  mod.rs  unity.rs
src/import/: analysis.rs  color_quantization.rs  detection.rs  mod.rs  structured_regions.rs
src/lsp/: color_utils.rs  completions.rs  hover.rs  mod.rs  project.rs  server.rs  symbols.rs  timing_utils.rs  transform_utils.rs  types.rs
src/mcp/: mod.rs  server.rs
src/models/: animation.rs  composition.rs  core.rs  import.rs  mod.rs  object.rs  palette.rs  particle.rs  region.rs  sprite.rs  transform.rs  variant.rs
src/palettes/: mod.rs
src/python/: color.rs  import.rs  mod.rs  parse.rs  registry.rs  render.rs  types.rs  validate.rs
src/registry/: composition.rs  mod.rs  palette.rs  renderable.rs  sprite.rs  traits.rs  transform.rs
src/templates/: justfile.rs  mod.rs
src/transforms/: anchor.rs  apply.rs  css.rs  dither.rs  expression.rs  mod.rs  parsing.rs  types.rs
tests/: antialias_integration.rs  build_system_tests.rs  cli_draw.rs  cli_mask.rs  cli_scale.rs  cli_transform.rs  css_integration_tests.rs  css_variables_tests.rs  demo_tests.rs  integration_tests.rs  mcp_integration.rs  nested_tests.rs  phase19_tests.rs  project_context_tests.rs  structured_test.rs  terminal_alias_tests.rs  wasm_tests.rs
tests/demos/: mod.rs
vscode-pixelsrc/: .vscodeignore  README.md  language-configuration.json  package.json
vscode-pixelsrc/src/: color-decorators.ts  extension.ts  lsp-client.ts  preview.ts
vscode-pixelsrc/syntaxes/: pixelsrc.tmLanguage.json
wasm/: .gitignore  README.md  package.json  test.mjs
website/: index.html  manifest.json  package-lock.json  package.json  vite.config.ts
website/src/: editor.ts  (+5 more)
(+392 files in other folders)
