[package]
name = "pixelsrc"
version = "0.1.0"
edition = "2021"
description = "Pixelsrc - GenAI-native pixel art format and compiler"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "pxl"
path = "src/main.rs"

[features]
default = []
wasm = ["wasm-bindgen", "console_error_panic_hook"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
image = "0.24"
clap = { version = "4.0", features = ["derive"] }
glob = "0.3"
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
regex = "1.12.2"
notify = "6.1"
atty = "0.2"
# CSS parsing - using minimal features for WASM compatibility
# Note: bundler and visitor features are NOT available in WASM builds
lightningcss = { version = "1.0.0-alpha.68", default-features = false, features = ["serde"] }
notify-debouncer-mini = "0.4"
rayon = "1.10"

[dev-dependencies]
tempfile = "3"
wasm-bindgen-test = "0.3"
serial_test = "3.0"
sha2 = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Enable js feature for getrandom to support WASM (required by lightningcss -> ahash -> getrandom)
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"

# Skip wasm-opt to avoid version compatibility issues with bulk memory operations
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

# =============================================================================
# Linting Configuration
# =============================================================================
# Note: Clippy lints are configured via CI command-line flags due to
# Cargo.toml [lints.clippy] table not being respected in some environments.
# See .github/workflows/ci.yml for the canonical clippy configuration.

[lints.rust]
# Forbid unsafe code - this is a pixel art tool, no need for unsafe
unsafe_code = "forbid"
